a1/brendan_gordon/TEST_PROGRAMS/invalidtype/alexandre_st-louis_fortier/004-sub-incompatible-type.min
var a: int;

print "allo" - 1;

